--- a/examples/tilesource-collection/index.html
+++ b/examples/tilesource-collection/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
 
-    <title>Tile Source Collections | OpenSeadragon</title>
+    <title>Collection Mode | OpenSeadragon</title>
 
     <link rel='stylesheet' 
           type='text/css'
@@ -20,15 +20,15 @@
        alt="Fork me on GitHub" /></a>
     <div id="container">
         <div class="download">
-            <a href="https://github.com/openseadragon/openseadragon/releases/download/v1.2.1/openseadragon-bin-1.2.1.zip">
+            <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.0.0/openseadragon-bin-2.0.0.zip">
                 <img border="0" width="90" src="/images/zip.png"></a>
-            <a href="https://github.com/openseadragon/openseadragon/releases/download/v1.2.1/openseadragon-bin-1.2.1.tar.gz">
+            <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.0.0/openseadragon-bin-2.0.0.tar.gz">
                 <img border="0" width="90" src="/images/tar.png"></a>
         </div>
         <img class="logo" src="/images/logo.png">
         <h1>
             <a href="/">OpenSeadragon</a><span class="version">
-                1.2.1
+                2.0.0
             </span>
             <span class="tagline">
             </span>
@@ -53,20 +53,8 @@
             </ul>
         </div>
 
-        <h2>
-    example: image collections
-</h2>
-<p>
-    The image collection is a major hurdle for OpenSeadragon. It allows
-    arbitrarily large sets of tile sources, of mixed types, to be used to
-    easily visualize the group as a &quot;wall&quot; or &quot;grid&quot;. 
-    <strong>Many core features are available for preview now, though the
-    functionality is not yet complete.</strong>
-</p>
-<p>
-    When complete, this feature will make OpenSeadragon into a whole new
-    platform for zoomable image visualization.
-</p>
+        <h2>Collection Mode</h2>
+<p>If you just want all of your images laid out in a row or grid, collection mode takes care of arranging everything for you.</p>
 
 <div class="description">
     <h3>Basic Single-Row Tile Source Collection</h3>
