--- a/examples/ui-reference-strip/index.html
+++ b/examples/ui-reference-strip/index.html
@@ -20,15 +20,15 @@
        alt="Fork me on GitHub" /></a>
     <div id="container">
         <div class="download">
-            <a href="https://github.com/openseadragon/openseadragon/releases/download/v1.2.1/openseadragon-bin-1.2.1.zip">
+            <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.0.0/openseadragon-bin-2.0.0.zip">
                 <img border="0" width="90" src="/images/zip.png"></a>
-            <a href="https://github.com/openseadragon/openseadragon/releases/download/v1.2.1/openseadragon-bin-1.2.1.tar.gz">
+            <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.0.0/openseadragon-bin-2.0.0.tar.gz">
                 <img border="0" width="90" src="/images/tar.png"></a>
         </div>
         <img class="logo" src="/images/logo.png">
         <h1>
             <a href="/">OpenSeadragon</a><span class="version">
-                1.2.1
+                2.0.0
             </span>
             <span class="tagline">
             </span>
@@ -53,7 +53,7 @@
             </ul>
         </div>
 
-        <h2>example: tilesource reference strip</h2>
+        <h2>Image Reference Strip</h2>
 
 <p>
     An image reference strip allows the user to quickly preview and navigate a
