--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -94,6 +94,12 @@
         </ul>
     </li>
     <li>
+        <a href="https://familysearch.org/">FamilySearch</a>
+        <ul>
+            <li>e.g. <a href="https://familysearch.org/pal:/MM9.3.1/TH-1942-27779-1718-28?cc=2000219">Page from United States Census, 1940</a></li>
+        </ul>
+    </li>
+    <li>
         <a href="http://gallicalabs.bnf.fr">Gallica Labs, forthcoming version of the BnF's digital library (Bibliothèque nationale de France)</a>
         <ul>
             <li>e.g. <a href="http://gallicalabs.bnf.fr/ark:/12148/btv1b8571085n/f15.zoom">Heures à l'usage de Paris [Heures de Jeanne de France]</a></li>
