Site-build #77 (in-the-wild)

--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -71,6 +71,7 @@
             <li>e.g. <a href="http://www.iub.edu/~iuam/online_modules/barkcloth/main/">Fiji Islands Barkcloth</a></li>
         </ul>
     </li>
+    <li><a href="http://javipsantos.com/gigafotos/index.html">Javier P. Santos: GigaFotos</a></li>
 </ul>
 <h4>History</h4>
 <ul class="square-list">
@@ -188,6 +189,7 @@
             <li>e.g. <a href="http://epaper.e-dicola.net/epaper/magazines/494-numero-10">Com.Pack Magazine, Issue 10</a></li>
         </ul>
     </li>
+    <li><a href="http://www.monticello.org/mulberry-row/places/phase-i">Landscape of Slavery: Mulberry Row at Monticello</a></li>
     <li><a href="http://beehivecollective.org/posterViewer/?poster=mr">Mesoam&eacute;rica Resiste, Beehive Design Collective</a></li>
     <li><a href="http://amhistory.si.edu/starspangledbanner/interactive-flag-html5/">The Star-Spangled Banner, Smithsonian</a></li>
     <li><a href="http://twittercensus.se/graph2014/graphwalk14.php">Swedish Twitter Census, 2014</a></li>
