--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -72,6 +72,7 @@
         </ul>
     </li>
     <li><a href="http://javipsantos.com/gigafotos/index.html">Javier P. Santos: GigaFotos</a></li>
+    <li><a href="https://legionofhonor.famsf.org/interactives/luminous-worlds/#/list">Luminous Worlds: British Works on Paper, 1760-1900</a></li>
 </ul>
 <h4>History</h4>
 <ul class="square-list">
