--- a/index.html
+++ b/index.html
@@ -196,12 +196,23 @@
 
 <h2 id='plugins'>Plugins</h2>
 <p>Plugins can be used to enhance OpenSeadragon. The following plugins are currently available:</p>
-<ul class="square-list">
-    <li><a href="https://github.com/msalsbery/OpenSeadragonImagingHelper">OpenSeadragonImagingHelper</a> provides coordinate conversion, pan, and zoom methods in a simplified coordinate system.</li>
-    <li><a href="https://github.com/MartinPluta/OpenSeadragonMultiRow">OpenSeadragonMultiRow</a> adds navigation and options for multi row image sequences.</li>
-    <li><a href="https://github.com/NIST-ISG/OpenSeadragonScalebar">OpenSeadragonScalebar</a> displays your image's scale in real-world measurements.</li>
-    <li><a href="https://github.com/msalsbery/OpenSeadragonViewerInputHook">OpenSeadragonViewerInputHook</a> provides hooks into an OpenSeadragon.Viewer and/or OpenSeadragon.MouseTracker for overriding/extending the default user-input event handling behavior.</li>
-    <li><a href="https://github.com/openseadragon/svg-overlay">SVG Overlay</a> allows you to add SVG elements that pan and zoom with the OpenSeadragon viewer.</li>
+<ul>
+    <li>
+        <h3>Code Plugins</h3>
+        <ul class="square-list">
+            <li><a href="https://github.com/msalsbery/OpenSeadragonImagingHelper">OpenSeadragonImagingHelper</a> provides coordinate conversion, pan, and zoom methods in a simplified coordinate system.</li>
+            <li><a href="https://github.com/MartinPluta/OpenSeadragonMultiRow">OpenSeadragonMultiRow</a> adds navigation and options for multi row image sequences.</li>
+            <li><a href="https://github.com/NIST-ISG/OpenSeadragonScalebar">OpenSeadragonScalebar</a> displays your image's scale in real-world measurements.</li>
+            <li><a href="https://github.com/msalsbery/OpenSeadragonViewerInputHook">OpenSeadragonViewerInputHook</a> provides hooks into an OpenSeadragon.Viewer and/or OpenSeadragon.MouseTracker for overriding/extending the default user-input event handling behavior.</li>
+            <li><a href="https://github.com/openseadragon/svg-overlay">SVG Overlay</a> allows you to add SVG elements that pan and zoom with the OpenSeadragon viewer.</li>
+        </ul>
+    </li>
+    <li>
+        <h3>Icon Packs</h3>
+        <ul class="square-list">
+            <li><a href="https://github.com/peterthomet/openseadragon-flat-toolbar-icons">Flat Toolbar Icons</a>; simple, flat design toolbar icons.</li>
+        </ul>
+    </li>
 </ul>
 
 
