Recent site-build changes

--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -135,7 +135,7 @@
     <li>
         <a href="http://trove.nla.gov.au/">National Library of Australia: Trove</a>
         <ul>
-            <li>e.g. <a href="http://nladom-test.nla.gov.au/nla.obj-41292842/view">Posters relating to the Australian federal elections campaigns</a></li>
+            <li>e.g. <a href="http://nla.gov.au/nla.obj-41292850">Posters relating to the Australian federal elections campaigns</a></li>
         </ul>
     </li>
     <li>
