In the wild fix

--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -71,7 +71,7 @@
             <li>e.g. <a href="http://www.iub.edu/~iuam/online_modules/barkcloth/main/">Fiji Islands Barkcloth</a></li>
         </ul>
     </li>
-    <li><a href="http://javipsantos.com/gigafotos/index.html">Javier P. Santos: GigaFotos</a></li>
+    <li><a href="http://javipsantos.com/gigafotos/">Javier P. Santos: GigaFotos</a></li>
     <li><a href="https://legionofhonor.famsf.org/interactives/luminous-worlds/#/list">Luminous Worlds: British Works on Paper, 1760-1900</a></li>
 </ul>
 <h4>History</h4>
