--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -174,6 +174,12 @@
 <ul class="square-list">
     <li><a href="http://cancer.digitalslidearchive.net/">Cancer Digital Slide Archive</a></li>
     <li>
+        <a href="http://siphonophore.org/microdraw/">MicroDraw: Collaborative Annotation</a>
+        <ul>
+            <li>e.g. <a href="http://siphonophore.org/microdraw/microdraw.html?source=bigbrain/bigbrain.json">BigBrain human brain slice</a></li>
+        </ul>
+    </li>
+    <li>
         <a href="https://isg.nist.gov/deepzoomweb/">NIST Computational Science in Metrology</a>
         <ul>
             <li>e.g. <a href="https://isg.nist.gov/deepzoomweb/view/image/moche">Material Science: Moche</a></li>
