--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -73,6 +73,12 @@
     </li>
     <li><a href="http://javipsantos.com/gigafotos/">Javier P. Santos: GigaFotos</a></li>
     <li><a href="https://legionofhonor.famsf.org/interactives/luminous-worlds/#/list">Luminous Worlds: British Works on Paper, 1760-1900</a></li>
+    <li>
+        <a href="http://www.owlstand.com/">Owlstand</a>
+        <ul>
+            <li>e.g. <a href="http://www.owlstand.com/exhibition/room/9e83a1f3-2b6c-4ac2-bd1d-36b03871d0b4">7.83 Hz: Artwork by Skip Noah</a></li>
+        </ul>
+    </li>
 </ul>
 <h4>History</h4>
 <ul class="square-list">
