--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -79,6 +79,12 @@
             <li>e.g. <a href="http://www.owlstand.com/exhibition/room/9e83a1f3-2b6c-4ac2-bd1d-36b03871d0b4">7.83 Hz: Artwork by Skip Noah</a></li>
         </ul>
     </li>
+    <li>
+        <a href="http://shop.sarahha.com/">Sarah Ha Jewelry</a>
+        <ul>
+            <li>e.g. <a href="http://shop.sarahha.com/collections/christian-and-jewish-faiths/products/nanobible-modern-cross-diamond-cut-setting">NanoBible Modern Cross Diamond Cut Setting</a></li>
+        </ul>
+    </li>
 </ul>
 <h4>History</h4>
 <ul class="square-list">
