Creating, in-the-wild updates

--- a/examples/creating-zooming-images/index.html
+++ b/examples/creating-zooming-images/index.html
@@ -90,6 +90,11 @@
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
     </tr>
     <tr>
+        <td><a href="https://github.com/jeremytubbs/deepzoom">Deepzoom</a></td>
+        <td>PHP</td>
+        <td><a href="/examples/tilesource-dzi/">DZI</a></td>
+    </tr>
+    <tr>
         <td><a href="https://github.com/dblock/dzt">DZT</a></td>
         <td>an image slicing library and tool written in Ruby</td>
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
