--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -71,6 +71,12 @@
             <li>e.g. <a href="http://www.iub.edu/~iuam/online_modules/barkcloth/main/">Fiji Islands Barkcloth</a></li>
         </ul>
     </li>
+    <li>
+        <a href="http://collection.imamuseum.org/">Indianapolis Museum of Art</a>
+        <ul>
+            <li>e.g. <a href="http://collection.imamuseum.org/artwork/80112/">Sunlight, Frank W. Benson (American, 1862-1951)</a></li>
+        </ul>
+    </li>
     <li><a href="http://javipsantos.com/gigafotos/">Javier P. Santos: GigaFotos</a></li>
     <li><a href="https://legionofhonor.famsf.org/interactives/luminous-worlds/#/list">Luminous Worlds: British Works on Paper, 1760-1900</a></li>
     <li>
