Bug fixes for #90

--- a/examples/tilesource-iiif/index.html
+++ b/examples/tilesource-iiif/index.html
@@ -106,11 +106,12 @@ OpenSeadragon({
     visibilityRatio:    1,
     minZoomLevel:       1,
     defaultZoomLevel:   1,
+    sequenceMode:       true,
     tileSources:   [{
       "@context": "http://iiif.io/api/image/2/context.json",
       "@id": "http://libimages.princeton.edu/loris2/pudl0001%2F4609321%2Fs42%2F00000001.jp2",
       "height": 7200,
-      "width": 5233
+      "width": 5233,
       "profile": [ "http://iiif.io/api/image/2/level2.json" ],
       "protocol": "http://iiif.io/api/image",
       "tiles": [{
@@ -131,11 +132,12 @@ OpenSeadragon({
         visibilityRatio:    1,
         minZoomLevel:       1,
         defaultZoomLevel:   1,
+        sequenceMode:       true,
         tileSources:   [{
           "@context": "http://iiif.io/api/image/2/context.json",
           "@id": "http://libimages.princeton.edu/loris2/pudl0001%2F4609321%2Fs42%2F00000001.jp2",
           "height": 7200,
-          "width": 5233
+          "width": 5233,
           "profile": [ "http://iiif.io/api/image/2/level2.json" ],
           "protocol": "http://iiif.io/api/image",
           "tiles": [{
@@ -146,7 +148,7 @@ OpenSeadragon({
           "@context": "http://iiif.io/api/image/2/context.json",
           "@id": "http://libimages.princeton.edu/loris2/pudl0001%2F4609321%2Fs42%2F00000002.jp2",
           "height": 7200,
-          "width": 5093
+          "width": 5093,
           "profile": [ "http://iiif.io/api/image/2/level2.json" ],
           "protocol": "http://iiif.io/api/image",
           "tiles": [{
@@ -157,7 +159,7 @@ OpenSeadragon({
           "@context": "http://iiif.io/api/image/2/context.json",
           "@id": "http://libimages.princeton.edu/loris2/pudl0001%2F4609321%2Fs42%2F00000003.jp2",
           "height": 7200,
-          "width": 5387
+          "width": 5387,
           "profile": [ "http://iiif.io/api/image/2/level2.json" ],
           "protocol": "http://iiif.io/api/image",
           "tiles": [{
@@ -168,7 +170,7 @@ OpenSeadragon({
           "@context": "http://iiif.io/api/image/2/context.json",
           "@id": "http://libimages.princeton.edu/loris2/pudl0001%2F4609321%2Fs42%2F00000004.jp2",
           "height": 7200,
-          "width": 5434
+          "width": 5434,
           "profile": [ "http://iiif.io/api/image/2/level2.json" ],
           "protocol": "http://iiif.io/api/image",
           "tiles": [{
@@ -197,6 +199,7 @@ OpenSeadragon({
             OpenSeadragon({
                 id:            "example-xmlhttprequest-for-info-json",
                 prefixUrl:     "/openseadragon/images/",
+                sequenceMode:  true,
                 tileSources:   [
                     "http://libimages.princeton.edu/loris2/pudl0001%2F4609321%2Fs42%2F00000001.jp2/info.json",
                     "http://libimages.princeton.edu/loris2/pudl0001%2F4609321%2Fs42%2F00000002.jp2/info.json",
@@ -222,7 +225,7 @@ OpenSeadragon({
     "@context": "http://iiif.io/api/image/2/context.json",
     "@id": "http://libimages.princeton.edu/loris2/pudl0001%2F4609321%2Fs42%2F00000004.jp2",
     "height": 7200,
-    "width": 5434
+    "width": 5434,
     "profile": [ "http://iiif.io/api/image/2/level2.json" ],
     "protocol": "http://iiif.io/api/image",
     "tiles": [{
@@ -233,7 +236,8 @@ OpenSeadragon({
 <pre>
 OpenSeadragon({
     ...
-    tileSources:   [
+    sequenceMode: true,
+    tileSources: [
         "http://libimages.princeton.edu/loris2/pudl0001%2F4609321%2Fs42%2F00000001.jp2/info.json",
         "http://libimages.princeton.edu/loris2/pudl0001%2F4609321%2Fs42%2F00000002.jp2/info.json",
         "http://libimages.princeton.edu/loris2/pudl0001%2F4609321%2Fs42%2F00000003.jp2/info.json",
