New plug-in; sequence mode for buttons demo

--- a/examples/ui-binding-custom-buttons/index.html
+++ b/examples/ui-binding-custom-buttons/index.html
@@ -101,6 +101,7 @@
         nextButton:     "next",
         previousButton: "previous",
         showNavigator:  true,
+        sequenceMode: true,
         tileSources:    [{
             type: 'legacy-image-pyramid',
             levels:[{
