--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -192,6 +192,12 @@
 <ul class="square-list">
     <li><a href="http://cancer.digitalslidearchive.net/">Cancer Digital Slide Archive</a></li>
     <li>
+        <a href="http://www.proteinatlas.org/">The Human Protein Atlas</a>
+        <ul>
+            <li>e.g. <a href="http://www.proteinatlas.org/ENSG00000213463-SYNJ2BP/tissue/mouse+brain">Mouse brain tissue</a></li>
+        </ul>
+    </li>
+    <li>
         <a href="http://siphonophore.org/microdraw/">MicroDraw: Collaborative Annotation</a>
         <ul>
             <li>e.g. <a href="http://siphonophore.org/microdraw/microdraw.html?source=bigbrain/bigbrain.json">BigBrain human brain slice</a></li>
