--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             <li><a href="https://github.com/NIST-ISG/OpenSeadragonScalebar">OpenSeadragonScalebar</a> displays your image's scale in real-world measurements.</li>
             <li><a href="https://github.com/msalsbery/OpenSeadragonViewerInputHook">OpenSeadragonViewerInputHook</a> provides hooks into an OpenSeadragon.Viewer and/or OpenSeadragon.MouseTracker for overriding/extending the default user-input event handling behavior.</li>
             <li><a href="https://github.com/openseadragon/svg-overlay">SVG Overlay</a> allows you to add SVG elements that pan and zoom with the OpenSeadragon viewer.</li>
-            <li><a href="https://github.com/picturae/openseadragonselection">OpenSeadragonSelection</a> provides functionality for selecting a rectangular part of an image. Useful for cropping</li>
+            <li><a href="https://github.com/picturae/openseadragonselection">OpenSeadragonSelection</a> provides functionality for selecting a rectangular part of an image. Useful for cropping.</li>
         </ul>
     </li>
     <li>
