Updating "creating" page

--- a/examples/creating-zooming-images/index.html
+++ b/examples/creating-zooming-images/index.html
@@ -150,6 +150,11 @@
             <a href="/examples/tilesource-iiif/">IIIF</a> (requires a IIIF-compliant image server with JPEG 2000 support, like <a href="https://github.com/pulibrary/loris">Loris</a>; see also <a href="http://iiif.io">iiif.io</a> for more details)
         </td>
     </tr>
+    <tr>
+        <td><a href="https://github.com/NIST-ISG/pyramidio">PyramidIO</a></td>
+        <td>Java (command line and library)</td>
+        <td><a href="/examples/tilesource-dzi/">DZI</a></td>
+    </tr>
 </table>
 
 
