--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -64,6 +64,12 @@
         </ul>
     </li>
     <li><a href="http://chrisjordan.com/gallery/rtn/">Chris Jordan: Running the Numbers</a></li>
+    <li>
+        <a href="http://feinerarts.com/feiner-arts---deep-zoom.html">Feiner Arts</a>
+        <ul>
+            <li>e.g. <a href="http://zoom.feinerarts.com/earth_city/">Earth City</a></li>
+        </ul>
+    </li>
     <li><a href="http://www.in2white.com/">In2White</a></li>
     <li>
         <a href="https://artmuseum.indiana.edu/">Indiana University Art Museum</a>
@@ -83,6 +89,12 @@
         <a href="http://www.owlstand.com/">Owlstand</a>
         <ul>
             <li>e.g. <a href="http://www.owlstand.com/exhibition/room/9e83a1f3-2b6c-4ac2-bd1d-36b03871d0b4">7.83 Hz: Artwork by Skip Noah</a></li>
+        </ul>
+    </li>
+    <li>
+        <a href="http://www.186282mps.com/">Photography by Adrian Mendoza</a>
+        <ul>
+            <li>e.g. <a href="http://www.186282mps.com/the-muselar.html">A Muselar</a></li>
         </ul>
     </li>
     <li>
