OSD 2.1.0 site changes

--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
             <!-- <li><a href='/examples/tilesource-zoomit/'>
                 <span>Pulling from Zoom.it</span>
             </a></li> -->
+            <li><a href='/examples/tilesource-image/'>
+                <span>Simple Image</span>
+            </a></li>
         </ul>
     </li>
 
@@ -207,6 +210,7 @@
             <li><a href="https://github.com/openseadragon/svg-overlay">SVG Overlay</a> allows you to add SVG elements that pan and zoom with the OpenSeadragon viewer.</li>
             <li><a href="https://github.com/picturae/openseadragonselection">OpenSeadragonSelection</a> provides functionality for selecting a rectangular part of an image. Useful for cropping.</li>
             <li><a href="https://github.com/picturae/openseadragonrgb">OpenSeadragonRGB</a> allows reading the rgb values of image pixels.</li>
+            <li><a href="https://github.com/NIST-ISG/OpenSeadragonFiltering">OpenSeadragonFiltering</a> allows you to add image filters in OpenSeadragon.</li>
         </ul>
     </li>
     <li>
