--- a/examples/ui-overlays/index.html
+++ b/examples/ui-overlays/index.html
@@ -107,20 +107,22 @@ tile sources and want to overlay unique content on each, use this mechanism.
             var chronicling_america_example = function( sequence ){
                 return function(level, column, row){
                     var px = 0;
-                    if (column!=0) {
-                        px = this.tileSize * column - this.tileOverlap;
+                    if (column !== 0) {
+                        px = this.getTileWidth() * column - this.tileOverlap;
                     }
                     var py = 0;
-                    if (row!=0) {
-                        py = this.tileSize * row - this.tileOverlap;
+                    if (row !== 0) {
+                        py = this.getTileHeight() * row - this.tileOverlap;
                     }
                     var scale = this.getLevelScale(level);
                     var dimensionsScaled = this.dimensions.times(scale);
 
                     // find the dimension of the tile, adjust for no
                     // overlap data on top and left edges
-                    var sx = this.tileSize + (column==0 ? 1 : 2) * this.tileOverlap;
-                    var sy = this.tileSize + (row==0 ? 1 : 2) * this.tileOverlap;
+                    var sx = this.getTileWidth() +
+                            (column === 0 ? 1 : 2) * this.tileOverlap;
+                    var sy = this.getTileHeight() +
+                        (row === 0 ? 1 : 2) * this.tileOverlap;
 
                     // adjust size for single-tile levels where the image
                     // size is smaller than the regular tile size, and for
@@ -137,17 +139,18 @@ tile sources and want to overlay unique content on each, use this mechanism.
                     var x2 = parseInt((px + sx) / scale);
                     var y2 = parseInt((py + sy) / scale);
 
-                    return 'http://chroniclingamerica.loc.gov/lccn/sn85066387/1898-01-09/ed-1/seq-'+
-                        sequence+'/'+ 
-                        'image_'+tile_width+'x'+tile_height+
-                        '_from_'+x1+','+y1+
-                        '_to_'+x2+','+y2+'.jpg';
+                    return 'http://chroniclingamerica.loc.gov/lccn/sn85066387/1898-01-09/ed-1/seq-' +
+                        sequence + '/' +
+                        'image_' + tile_width + 'x' + tile_height +
+                        '_from_' + x1 + ',' + y1 +
+                        '_to_' + x2 + ',' + y2 + '.jpg';
                 };
             };
 
             OpenSeadragon({
                 id:            "example-tilesource-overlay",
                 prefixUrl:     "/openseadragon/images/",
+                sequenceMode: true,
                 tileSources: [{
                     minLevel: 8,
                     width: 6425,
@@ -340,6 +343,7 @@ OpenSeadragon({
         OpenSeadragon({
             id:            "example-viewport-overlay",
             prefixUrl:     "/openseadragon/images/",
+            sequenceMode:  true,
             overlays: [{
                 id: 'global-overlay-filter',
                 px: 0, 
@@ -412,6 +416,7 @@ OpenSeadragon({
                 showNavigator: false,
                 preserveViewport: true,
                 minZoomLevel:  1,
+                sequenceMode:  true,
                 overlays: [{
                     minLevel: 8,
                     px: 6425,
@@ -632,6 +637,7 @@ OpenSeadragon({
     preserveViewport: true,
     showNavigator: false,
     minZoomLevel:  1,
+    sequenceMode:  true,
     overlays: [{
         px: 6425,
         py: 0,
