--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
             <li><a href='/examples/ui-viewport-navigator/'>
                 <span>Viewport Navigator</span>
             </a></li>
+            <li><a href='/examples/ui-rotation/'>
+                <span>Rotation</span>
+            </a></li>
             <li><a href='/examples/ui-toolbar/'>
                 <span>Toolbar</span>
             </a></li>
