--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -40,6 +40,8 @@
                     >Examples &amp; Features</a></li>
                 <li><a href='/#plugins'
                     >Plugins</a></li>
+                <li><a href='/#browser-extension'
+                    >Browser Extension</a></li>
                 <li><a href='/#download'
                     >Download &amp; Install</a></li>
                 <li><a href='/docs/'
@@ -258,6 +260,8 @@ Victoria and Albert Museum: Exhibition Road drawing scroll</a> (<a href="http://
                 >Examples &amp; Features</a></li>
             <li><a href='/#plugins'
                 >Plugins</a></li>
+             <li><a href='/#browser-extension'
+                    >Browser Extension</a></li>
             <li><a href='/#download'
                 >Download &amp; Install</a></li>
             <li><a href='/docs/'
