--- a/examples/ui-binding-custom-buttons/index.html
+++ b/examples/ui-binding-custom-buttons/index.html
@@ -40,6 +40,8 @@
                     >Examples &amp; Features</a></li>
                 <li><a href='/#plugins'
                     >Plugins</a></li>
+                <li><a href='/#browser-extension'
+                    >Browser Extension</a></li>
                 <li><a href='/#download'
                     >Download &amp; Install</a></li>
                 <li><a href='/docs/'
@@ -193,6 +195,8 @@ viewer.addHandler("page", function (data) {
                 >Examples &amp; Features</a></li>
             <li><a href='/#plugins'
                 >Plugins</a></li>
+             <li><a href='/#browser-extension'
+                    >Browser Extension</a></li>
             <li><a href='/#download'
                 >Download &amp; Install</a></li>
             <li><a href='/docs/'
