--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
                     >Examples &amp; Features</a></li>
                 <li><a href='/#plugins'
                     >Plugins</a></li>
+                <li><a href='/#browser-extension'
+                    >Browser Extension</a></li>
                 <li><a href='/#download'
                     >Download &amp; Install</a></li>
                 <li><a href='/docs/'
@@ -224,6 +226,23 @@
     </li>
 </ul>
 
+<h2 id='browser-extension'>Browser Extension</h2>
+<p>
+    <a href="https://github.com/openseadragon/browser-extension">OpenSeadragonizer</a>
+    enables viewing any image on a webpage with OpenSeadragon.
+</p>
+<ul class="square-list">
+    <li>
+        <a href="https://chrome.google.com/webstore/detail/openseadragonizer/lbjfeiidhldnfohmhnnnjgcmgjbnibgd">
+            OpenSeadragonizer for Chrome
+        </a>
+    </li>
+    <li>
+        <a href="https://addons.mozilla.org/en-US/firefox/addon/openseadragonizer/">
+            OpenSeadragonizer for Firefox
+        </a>
+    </li>
+</ul>
 
 <a name="installing"></a>
 <h2 id='download'>Download &amp; Install</h2>
@@ -281,6 +300,8 @@
                 >Examples &amp; Features</a></li>
             <li><a href='/#plugins'
                 >Plugins</a></li>
+             <li><a href='/#browser-extension'
+                    >Browser Extension</a></li>
             <li><a href='/#download'
                 >Download &amp; Install</a></li>
             <li><a href='/docs/'
