--- a/examples/tilesource-iiif/index.html
+++ b/examples/tilesource-iiif/index.html
@@ -40,6 +40,8 @@
                     >Examples &amp; Features</a></li>
                 <li><a href='/#plugins'
                     >Plugins</a></li>
+                <li><a href='/#browser-extension'
+                    >Browser Extension</a></li>
                 <li><a href='/#download'
                     >Download &amp; Install</a></li>
                 <li><a href='/docs/'
@@ -256,6 +258,8 @@ OpenSeadragon({
                 >Examples &amp; Features</a></li>
             <li><a href='/#plugins'
                 >Plugins</a></li>
+             <li><a href='/#browser-extension'
+                    >Browser Extension</a></li>
             <li><a href='/#download'
                 >Download &amp; Install</a></li>
             <li><a href='/docs/'
