--- a/examples/ui-viewport-navigator/index.html
+++ b/examples/ui-viewport-navigator/index.html
@@ -40,6 +40,8 @@
                     >Examples &amp; Features</a></li>
                 <li><a href='/#plugins'
                     >Plugins</a></li>
+                <li><a href='/#browser-extension'
+                    >Browser Extension</a></li>
                 <li><a href='/#download'
                     >Download &amp; Install</a></li>
                 <li><a href='/docs/'
@@ -242,6 +244,8 @@ does not autofade.
                 >Examples &amp; Features</a></li>
             <li><a href='/#plugins'
                 >Plugins</a></li>
+             <li><a href='/#browser-extension'
+                    >Browser Extension</a></li>
             <li><a href='/#download'
                 >Download &amp; Install</a></li>
             <li><a href='/docs/'
