--- a/index.html
+++ b/index.html
@@ -243,6 +243,9 @@
         </a>
     </li>
 </ul>
+<p>
+    You can also use the <a href="openseadragonizer">web version of OpenSeadragonizer</a> directly without installing anything.
+</p>
 
 <a name="installing"></a>
 <h2 id='download'>Download &amp; Install</h2>
