--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.1.0/openseadragon-bin-2.1.0.tar.gz">tar.gz</a> formats.
 </p>
 <p>
-    You can also use <a href="http://bower.io">Bower</a> to install it: <tt>bower install openseadragon</tt>
+    You can also use <a href="http://bower.io">Bower</a> (<tt>bower install openseadragon</tt>) or <a href="https://www.npmjs.com/package/openseadragon">npm</a> (<tt>npm install openseadragon</tt>).
 </p>
 <p>
     For installation instructions, see the <a href="/docs/">Getting Started</a> page in the documentation.
