--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -88,9 +88,9 @@
     <li><a href="http://javipsantos.com/gigafotos/">Javier P. Santos: GigaFotos</a></li>
     <li><a href="https://legionofhonor.famsf.org/interactives/luminous-worlds/#/list">Luminous Worlds: British Works on Paper, 1760-1900</a></li>
     <li>
-        <a href="http://samling.nasjonalmuseet.no/en/">Nasjonalmuseet</a>
+        <a href="http://samling.nasjonalmuseet.no/en/">Nasjonalmuseet, Norway</a>
         <ul>
-            <li>e.g. <a href="http://samling.nasjonalmuseet.no/en/object/NG.M.00570">Winter, Edvard Munch (1899)</a></li>
+            <li>e.g. <a href="http://samling.nasjonalmuseet.no/en/object/NG.M.00467">Bridal Procession on the Hardangerfjord, Hans Gude &amp; Adolph Tidemand</a></li>
         </ul>
     </li>
     <li>
