Fixed https jquery

--- a/examples/ui-overlays/index.html
+++ b/examples/ui-overlays/index.html
@@ -57,7 +57,7 @@
 
         <h2>example: overlays</h2>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.js"></script>
 
 <p>Overlays are an important mechanism for displaying additional information
 on a zoomable image.  Below we present a few examples of how to
