Hiding Rdio example

--- a/examples/multi-image/index.html
+++ b/examples/multi-image/index.html
@@ -60,7 +60,7 @@
 <p>Here are some examples of what you can do with OpenSeadragon multi-image:</p>
 <ul class="square-list">
     <li><a href="http://iangilman.com/openseadragon/flickr/">OpenSeadragon + Flickr</a></li> 
-    <li><a href="http://iangilman.com/openseadragon/rdio/">OpenSeadragon + Rdio</a></li> 
+    <!-- <li><a href="http://iangilman.com/openseadragon/rdio/">OpenSeadragon + Rdio</a></li>  -->
     <li><a href="http://iangilman.com/openseadragon/chrisjordan/">OpenSeadragon + Chris Jordan</a></li> 
     <li><a href="http://demos.biblissima-condorcet.fr/chateauroux/osd-demo/">Demo of a virtual reconstruction of a medieval manuscript</a></li> 
 </ul>
