Mindat in the wild example

--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -236,6 +236,12 @@
         </ul>
     </li>
     <li>
+        <a href="http://www.mindat.org/">Mindat: Mineralogy Database</a>
+        <ul>
+            <li>e.g. <a href="http://www.mindat.org/photo-724204.html">Gold: Au</a></li>
+        </ul>
+    </li>
+    <li>
         <a href="https://isg.nist.gov/deepzoomweb/">NIST Computational Science in Metrology</a>
         <ul>
             <li>e.g. <a href="https://isg.nist.gov/deepzoomweb/view/image/moche">Material Science: Moche</a></li>
