--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -260,6 +260,7 @@
     </li>
     <li><a href="http://www.monticello.org/mulberry-row/places/phase-i">Landscape of Slavery: Mulberry Row at Monticello</a></li>
     <li><a href="http://beehivecollective.org/posterViewer/?poster=mr">Mesoam&eacute;rica Resiste, Beehive Design Collective</a></li>
+    <li><a href="http://www.madrona.com/seattle-tech-universe-poster/">Seattle Tech Universe</a></li>
     <li><a href="http://amhistory.si.edu/starspangledbanner/interactive-flag-html5/">The Star-Spangled Banner, Smithsonian</a></li>
     <li><a href="http://twittercensus.se/graph2014/graphwalk14.php">Swedish Twitter Census, 2014</a></li>
     <li><a href="http://dump.ventero.de/xkcd1110/open.html">xkcd #1110 remixed with OpenSeadragon</a></li>
