--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -278,6 +278,11 @@ Victoria and Albert Museum: Exhibition Road drawing scroll</a> (<a href="http://
     <li><a href="http://player.digirati.co.uk/">Wellcome Player</a></li>
     <li><a href="http://zoomable.ca/">Zoomable</a></li>
 </ul>
+<h4>Installations</h4>
+<ul class="square-list">
+    <li>Jewel City Exhibition, 2015, <a href="http://deyoung.famsf.org/">de Young Museum</a></li>
+    <li>Art &amp; Curiosity Cabinets Exhibition, 2015, <a href="https://thewadsworth.org/">Wadsworth Atheneum: Museum of Art</a></li>
+</ul>
 
 
         <ul class="footer">
