--- a/examples/creating-zooming-images/index.html
+++ b/examples/creating-zooming-images/index.html
@@ -132,6 +132,11 @@
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
     </tr>
     <tr>
+        <td><a href="http://chafalladas.com/dzifiles/dzi_creator_up/dzi_creator_perl.html">OpenSeaDragon DZI Online Composer</a></td>
+        <td>Web app and PERL script</td>
+        <td><a href="/examples/tilesource-dzi/">DZI</a></td>
+    </tr>
+    <tr>
         <td><a href="http://zoomable.ca/">Zoomable</a></td>
         <td>service, offers embeds; no explicit API</td>
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
