--- a/examples/creating-zooming-images/index.html
+++ b/examples/creating-zooming-images/index.html
@@ -133,7 +133,7 @@
     </tr>
     <tr>
         <td><a href="http://chafalladas.com/dzifiles/dzi_creator_up/dzi_creator_perl.html">OpenSeaDragon DZI Online Composer</a></td>
-        <td>Web app and PERL script</td>
+        <td>Web app (and PERL and PHP scripts)</td>
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
     </tr>
     <tr>
