New NIST github

--- a/examples/creating-zooming-images/index.html
+++ b/examples/creating-zooming-images/index.html
@@ -158,7 +158,7 @@
         </td>
     </tr>
     <tr>
-        <td><a href="https://github.com/NIST-ISG/pyramidio">PyramidIO</a></td>
+        <td><a href="https://github.com/usnistgov/pyramidio">PyramidIO</a></td>
         <td>Java (command line and library)</td>
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
     </tr>
